<resources>
    <string name="app_name">JARS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_name">POW</string>
    <string name="sologan">Easy. Helpful. For Everyone</string>
    <string name="policy"><p>By creating an account you agree to our <br /><font color="white"> User Agreement</font> and <font color="white">Privacy policy</font></p></string>

    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="email">Email</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="expenses_name">Expenses</string>
    <string name="statistics_name">Statistics</string>
    <string name="nec_jar_name">Necessity account (NEC – 55%)</string>
    <string name="ffa_jar_name">Financial freedom account (FFA – 10%)</string>
    <string name="edu_jar_name">Education account (EDU – 10%)</string>
    <string name="ltss_jar_name">Long-term saving for spending account (LTSS – 10%)</string>
    <string name="play_jar_name">Play account (PLAY – 10%)</string>
    <string name="give_jar_name">Give Account (GIVE – 5%)</string>
    <string name="nec_jar_content">  This account is for managing your everyday expenses and bills. This would include things like your rent, mortgage, utilities, bills, taxes, food, clothes, etc. Basically it includes anything that you need to live, the necessities.</string>
    <string name="ffa_jar_content">  This is your golden goose. Therefore this jar is your ticket to financial freedom. The money that you put into this jar is used for investments and building your passive income streams. You never spend this money. The only time you would spend this money is once you become financially free. Even then you would only spend the returns on your investment. Never spend the principal.</string>
    <string name="edu_jar_content">  Money in this jar is meant to further your education and personal growth. Since you are your most valuable asset, an investment in yourself is a great way to use your money. I have used education money to purchase books, CDs, courses or anything else that has educational value.</string>
    <string name="ltss_jar_content">  The money in this jar is for the bigger nice to have purchases. As a result, my wife and I have used the money from this account to go skiing in The Rockies in Whistler, BC. We also used this money last September for our trip to Italy and Switzerland. The only reason we’ve been able to make this happen is because we’ve accumulated a nice sum each month in our LTSS. A small monthly contribution can go a long way.</string>
    <string name="play_jar_content">  This is my favorite account. PLAY money is spent every month on purchases you wouldn’t normally make. The purpose of this jar is to nurture yourself. You could purchase an expensive bottle of wine at dinner, get a massage or go on a weekend getaway. Play can be anything your heart desires. My wife and I each receive our own play money, and here’s the best part. We’re not allowed to ask what the other person spends their money on.</string>
    <string name="give_jar_content">  Finally, the money in this account is for giving away. In addition, we use the money in this jar to give to family and friends on birthdays, special occasions and holidays. You can also give away your time as opposed to giving away money. You could house sit for a neighbor, take a friends dog for a walk or volunteer in your community.</string>
    <string name="some_error">Some Error Occurred!</string>

</resources>
