<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_expenses"
            android:title="@string/expenses_name" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistics_name" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
    <group android:id="@+id/nav_footer">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_close"
            android:title="@string/sign_out" />
    </group>

</menu>