<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:layout_height="match_parent">
    <include layout="@layout/layout_action_bar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_banner_jars"/>
            <LinearLayout
                android:layout_marginTop="@dimen/d5"
                android:layout_marginLeft="@dimen/d5"
                android:layout_marginRight="@dimen/d5"
                android:padding="@dimen/d5"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_12"
                    android:text="@string/nec_jar_name"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nec_jar_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/d5"
                android:layout_marginLeft="@dimen/d5"
                android:layout_marginRight="@dimen/d5"
                android:padding="@dimen/d5"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_12"
                    android:text="@string/ffa_jar_name"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ffa_jar_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/d5"
                android:layout_marginLeft="@dimen/d5"
                android:layout_marginRight="@dimen/d5"
                android:padding="@dimen/d5"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_12"
                    android:text="@string/edu_jar_name"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_jar_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/d5"
                android:layout_marginLeft="@dimen/d5"
                android:layout_marginRight="@dimen/d5"
                android:padding="@dimen/d5"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_12"
                    android:text="@string/ltss_jar_name"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ltss_jar_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/d5"
                android:layout_marginLeft="@dimen/d5"
                android:layout_marginRight="@dimen/d5"
                android:padding="@dimen/d5"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_12"
                    android:text="@string/play_jar_name"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/play_jar_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/d5"
                android:padding="@dimen/d5"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_12"
                    android:text="@string/give_jar_name"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/give_jar_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>